Updated budget update save()

--- a/src/main/webapp/app/entities/budget/update/budget-update.component.html
+++ b/src/main/webapp/app/entities/budget/update/budget-update.component.html
@@ -98,7 +98,7 @@
             data-cy="amountRemaining"
             formControlName="amountRemaining"
             [readonly]="true"
-            [value]="getAmountRemaining()"
+            [value]="amountRemaining"
           />
           <div
             *ngIf="
