--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -78,7 +78,18 @@
                 <span jhiTranslate="global.menu.entities.analytics">Analytics</span>
               </a>
             </li>
-            <li></li>
+            <li>
+              <a
+                class="dropdown-item"
+                routerLink="financial-transaction"
+                routerLinkActive="active"
+                [routerLinkActiveOptions]="{ exact: true }"
+                (click)="collapseNavbar()"
+              >
+                <fa-icon icon="asterisk" [fixedWidth]="true"></fa-icon>
+                <span jhiTranslate="global.menu.entities.financialTransaction">Financial Transaction</span>
+              </a>
+            </li>
             <li>
               <a
                 class="dropdown-item"
@@ -103,7 +114,18 @@
                 <span jhiTranslate="global.menu.entities.budget">Budget</span>
               </a>
             </li>
-
+            <li>
+              <a
+                class="dropdown-item"
+                routerLink="financial-account"
+                routerLinkActive="active"
+                [routerLinkActiveOptions]="{ exact: true }"
+                (click)="collapseNavbar()"
+              >
+                <fa-icon icon="asterisk" [fixedWidth]="true"></fa-icon>
+                <span jhiTranslate="global.menu.entities.financialAccount">Financial Account</span>
+              </a>
+            </li>
             <!-- jhipster-needle-add-entity-to-menu - JHipster will add entities to the menu here -->
           </ul>
         </li>
